implement non-deprecated version of findReferences() method

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -192,6 +192,8 @@ by the core framework. Each project represents a separate <strong>dependency</st
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/159">#159</a>: Extension Manifold feature: Support extensions on inner classes (<a href="https://github.com/manifold-systems/manifold/tree/master/manifold-deps-parent/manifold-ext#inner-classes">docs</a>)
 <br>
+<a href="https://github.com/manifold-systems/manifold/issues/161">#161</a>: IJ Plugin bug: Fix a general Rename Refactor bug that is exposed by renaming a GraphQL union type
+<br>
 <a href="https://github.com/manifold-systems/manifold/issues/169">#169</a>: IJ Plugin bug: Fix break statement where a label does not resolve
 <br>
 <a href="https://github.com/manifold-systems/manifold/issues/170">#170</a>: IJ Plugin bug: Fix debugger expression evaluation
