- update api usage to match latest "static" manifold changes - fix refactoring etc. manifold types across multiple modules, mostly around caching psi classes

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,7 @@ dependencies {
   compile group: 'systems.manifold', name: 'manifold-strings', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-exceptions', version: manifoldVersion
   compile group: 'systems.manifold', name: 'manifold-preprocessor', version: manifoldVersion
+  compile group: 'systems.manifold', name: 'manifold-xml-rt', version: manifoldVersion
 
   testCompile group: 'junit', name: 'junit', version: '4.12'
 
