--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=2019.2.14
-manifoldVersion=2020.1.12
+manifoldVersion=2020.1.12-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
 defaultIjVersion=2019.2.3
