fix rename/goto-decl to handle kotlin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,8 @@
 version=2020.1.12
 manifoldVersion=2020.1.12-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
-defaultIjVersion=LATEST-EAP-SNAPSHOT
+//defaultIjVersion=LATEST-EAP-SNAPSHOT
+defaultIjVersion=2020.1.1
 //defaultIjVersion=2019.3.3
 //defaultIjVersion=2019.2.3
 //defaultIjVersion=2019.1.3
