--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2019.3.14
-manifoldVersion=2020.1.12-SNAPSHOT
+version=2019.3.15
+manifoldVersion=2020.1.13
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
 defaultIjVersion=2019.3.3
