--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2020.1.12
-manifoldVersion=2020.1.12-SNAPSHOT
+version=2020.1.13
+manifoldVersion=2020.1.13
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
 defaultIjVersion=2020.1.1
