--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,5 @@
-version=2020.1.13
-manifoldVersion=2020.1.13
+version=2020.1.17
+manifoldVersion=2020.1.17-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
-defaultIjVersion=2020.1.1
-//defaultIjVersion=2019.3.3
-//defaultIjVersion=2019.2.3
-//defaultIjVersion=2019.1.3
+defaultIjVersion=2020.1.2
