--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 version=2020.1.17
-manifoldVersion=2020.1.17
+manifoldVersion=2020.1.19-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 //defaultIjVersion=LATEST-EAP-SNAPSHOT
 defaultIjVersion=2020.1.2
