- support array extensions - support template fragments

--- a/jps-plugin/build.gradle
+++ b/jps-plugin/build.gradle
@@ -22,3 +22,8 @@ dependencies {
 
   manifoldAll group: 'systems.manifold', name: 'manifold-all', version: manifoldVersion
 }
+
+afterEvaluate {
+  // don't run the JPS plugin
+  project.tasks.remove( project.getTasks().runIde )
+}
