comply with latest manifold api changes to support manifold modules declared *exclusively* in the processorPath

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-version=2020.1.22
-manifoldVersion=2020.1.25
+version=2020.1.23
+manifoldVersion=2020.1.26-SNAPSHOT
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
 defaultIjVersion=LATEST-EAP-SNAPSHOT
 #defaultIjVersion=2020.1.2
